--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.1",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
